--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,6 +31,7 @@ jobs:
           ECR_REPOSITORY: sgil-celery-service # Replace with your ECR repository name
           IMAGE_TAG: latest
         run: |
+          set -e  # Exit on failure
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
