--- a/k8s/redis-deployment.yaml
+++ b/k8s/redis-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: redis-service
   labels:
     app: redis
 spec:
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis
+  name: redis-service
 spec:
   replicas: 1
   selector:
